feat(socle):  fin crud collection + scenario openapi
