# internal/handler/collection.go
@@ -6,6 +6,7 @@ import (
 	"learn_verse/internal/models"
 	"learn_verse/internal/service"
 	"net/http"
+	"strings"
 )
 
 func NewCollectionHandler(svc *service.CollectionService) *collectionHandler {
@@ -52,4 +53,47 @@ func (h *collectionHandler) List(c *gin.Context) {
 		return
 	}
 	c.JSON(http.StatusOK, list)
+}
+
+// DELETE /collection/:id
+
+func (h *collectionHandler) Delete(c *gin.Context) {
+	idParam := c.Param("id")
+	id, err := ulid.Parse(idParam)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "ID invalide"})
+		return
+	}
+	err = h.svc.Delete(c.Request.Context(), models.ULID(id))
+	if err != nil {
+		c.JSON(http.StatusNotFound, gin.H{"error": "Collection non trouvée"})
+		return
+	}
+	c.JSON(http.StatusNoContent, "Deleted")
+}
+
+func (h *collectionHandler) Update(c *gin.Context) {
+	idParam := c.Param("id")
+	id, err := ulid.Parse(idParam)
+	if err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": "ID invalide"})
+		return
+	}
+	var in models.ResourceCollection
+	if err := c.ShouldBindJSON(&in); err != nil {
+		c.JSON(http.StatusBadRequest, gin.H{"error": err.Error()})
+		return
+	}
+	in.ID = models.ULID(id)
+	updated, err := h.svc.Update(c.Request.Context(), in)
+	if err != nil {
+		if strings.Contains(err.Error(), "collection not found") {
+			c.JSON(http.StatusNotFound, gin.H{"error": "Collection non trouvée ou déjà supprimée"})
+			return
+		}
+		c.JSON(http.StatusInternalServerError, gin.H{"error": err.Error()})
+		return
+	}
+
+	c.JSON(http.StatusOK, updated)
 }
